--- a/src/main/resources/templates/qualification/qualification-detail.html
+++ b/src/main/resources/templates/qualification/qualification-detail.html
@@ -27,18 +27,45 @@
                       <p class="display_detail" data-th-text="${qualificationDetail.id}" ></p >
                     </td >
                   </tr >
-
                   <tr >
                     <th >
-                      <label class="form-label " > Name </label ></th >
+                      <label class="form-label " > Name </label >
+                    </th >
 
-                    <td ><p class="display_detail" data-th-text="${qualificationDetail.name}" ></p >
+                    <td >
+                      <p class="display_detail" data-th-text="${qualificationDetail.name}" ></p >
+                    </td >
+                  </tr >
+                  <tr >
+                    <th >
+                      <label class="form-label " > Certificate Number </label >
+                    </th >
+
+                    <td >
+                      <p class="display_detail" data-th-text="${qualificationDetail.certificateNumber}" ></p >
+                    </td >
+                  </tr >
+                  <tr >
+                    <th >
+                      <label class="form-label " > Start Date </label >
+                    </th >
+
+                    <td >
+                      <p class="display_detail" data-th-text="${qualificationDetail.startDate}" ></p >
+                    </td >
+                  </tr >
+                  <tr >
+                    <th >
+                      <label class="form-label " > End Date </label >
+                    </th >
+
+                    <td >
+                      <p class="display_detail" data-th-text="${qualificationDetail.endDate}" ></p >
                     </td >
                   </tr >
                   </tbody >
                 </table >
               </div >
-
 
             </div >
           </div >
@@ -46,6 +73,9 @@
       </div >
     </div >
     <div class="container-fluid  text-center" >
+      <div class="container-fluid">
+        <h2>All Employee Who Has This Qualification</h2>
+      </div>
       <div class="col" >
         <div class="col" id="employeeListPresent" data-th-if="${not #lists.isEmpty(employees)}" >
           <table class="table table-hover table-striped" id="myTable" >
@@ -104,11 +134,6 @@
             </h3 >
           </div >
         </div >
-        <script >
-            /*active boostrap alert - start*/
-            $(".alert").alert();
-            /*active boostrap alert - end*/
-        </script >
       </div >
     </div >
   </div >
@@ -118,5 +143,10 @@
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
 
+<script >
+    /*active boostrap alert - start*/
+    $(".alert").alert();
+    /*active boostrap alert - end*/
+</script >
 </body >
 </html >
