Change according to requirement

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -46,10 +46,10 @@
             </div >
             <div class="col-md-8" >
               <input id="id" data-th-field="*{id}" class="form-control" type="text" readonly />
-              <input type="text" data-th-field="*{liveDead}" hidden>
+              <input type="text" data-th-field="*{liveOrDead}" hidden>
             </div >
           </div >
-          <!--Payrole number-->
+          <!--System Register code number-->
           <div class="form-row text-right" data-th-if="${addStatus==false}">
             <div class="col-md-4" >
               <label class="control-label" for="name" >Employee code :</label >
@@ -100,6 +100,18 @@
                     data-th-if="${#fields.hasErrors('callingName')}" id="callingNameError" >Error Calling Name</span >
             </div >
           </div >
+          <!--WOP Number-->
+          <div class="form-row text-right" >
+            <div class="col-md-4" >
+              <label class="control-label" for="wopNumber" >WOP Number :</label >
+            </div >
+            <div class="col-md-8" >
+              <input id="wopNumber" data-th-field="*{wopNumber}" class="form-control" tabindex="5"
+                     type="text" minlength="5" />
+              <span class="error" data-th-errors="*{wopNumber}"
+                    data-th-if="${#fields.hasErrors('wopNumber')}" >Error Calling Name</span >
+            </div >
+          </div >
           <!--Nic-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
@@ -144,6 +156,32 @@
                      required type="date" />
               <span id="dateOfBirthError" data-th-errors="*{dateOfBirth}"
                     data-th-if="${#fields.hasErrors('dateOfBirth')}" class="error" >Error Birthday</span >
+            </div >
+          </div >
+          <!--Birth place-->
+          <div class="form-row text-right" >
+            <div class="col-md-4" >
+              <label class="control-label" for="birthPlace" >Birth Place :</label >
+            </div >
+            <div class="col-md-8" >
+              <input id="birthPlace" data-th-field="*{birthPlace}" class="form-control" tabindex="8"
+                     placeholder="Wariyapola"
+                     required type="text" />
+              <span data-th-errors="*{dateOfBirth}"
+                    data-th-if="${#fields.hasErrors('dateOfBirth')}" class="error" >Error Birthday</span >
+            </div >
+          </div >
+          <!--Birth Certificate Number-->
+          <div class="form-row text-right" >
+            <div class="col-md-4" >
+              <label class="control-label" for="birthCertificateNumber" >Birth Certificate Number :</label >
+            </div >
+            <div class="col-md-8" >
+              <input id="birthCertificateNumber" data-th-field="*{birthCertificateNumber}" class="form-control" tabindex="8"
+                     placeholder="Enter number"
+                     required type="text" />
+              <span data-th-errors="*{birthCertificateNumber}"
+                    data-th-if="${#fields.hasErrors('birthCertificateNumber')}" class="error" >Error Birthday</span >
             </div >
           </div >
           <!--Designation-->
