--- a/src/main/resources/templates/qualification/addQualification.html
+++ b/src/main/resources/templates/qualification/addQualification.html
@@ -85,7 +85,7 @@
         </div >
         <div class="col-md-8" >
           <input id="certificateNumber" data-th-field="*{certificateNumber}" class="form-control" tabindex="4"
-                 type="text" required />
+                 type="text" />
           <span data-th-errors="*{certificateNumber}"
                 data-th-if="${#fields.hasErrors('certificateNumber')}" class="error" >Error Employee code
                             </span >
@@ -98,7 +98,7 @@
         </div >
         <div class="col-md-8" >
           <input id="startDate" data-th-field="*{startDate}" class="form-control" tabindex="4"
-                 type="text" required />
+                 type="text" />
           <span data-th-errors="*{startDate}"
                 data-th-if="${#fields.hasErrors('startDate')}" class="error" >Error Employee code
                             </span >
@@ -111,9 +111,22 @@
         </div >
         <div class="col-md-8" >
           <input id="endDate" data-th-field="*{endDate}" class="form-control" tabindex="4"
-                 type="text" required />
+                 type="text"  />
           <span data-th-errors="*{endDate}"
                 data-th-if="${#fields.hasErrors('endDate')}" class="error" >Error Employee code
+                            </span >
+        </div >
+      </div >
+      <!--remarks-->
+      <div class="form-row text-right">
+        <div class="col-md-4" >
+          <label class="control-label" for="remarks" >Remarks :</label >
+        </div >
+        <div class="col-md-8" >
+          <textarea id="remarks" data-th-field="*{remarks}" class="form-control" tabindex="4"
+                 ></textarea>
+          <span data-th-errors="*{remarks}"
+                data-th-if="${#fields.hasErrors('remarks')}" class="error" >Error Employee code
                             </span >
         </div >
       </div >
