Commendation was updated

--- a/src/main/resources/templates/commendation/commendation.html
+++ b/src/main/resources/templates/commendation/commendation.html
@@ -15,7 +15,7 @@
             &nbsp;Add New</a >
         <!-- List Name-->
         <div class="col">
-            <h2 class="text-light text-center">
+            <h2  class="text-center">
                 <strong>
                     Offence Management
                 </strong>
