--- a/src/main/resources/templates/institute/institute.html
+++ b/src/main/resources/templates/institute/institute.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>punishment</title>
+    <title>institute</title>
 </head>
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
@@ -12,11 +12,11 @@
     <div class="row text-center ">
         <!-- New Institute Button-->
         <div class="col">
-            <a class="btn btn-success" href="/punishment/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a class="btn btn-success" href="/institute/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
         </div>
         <!-- List Name-->
         <div class="col">
-            <h2 class="text-light text-center">
+            <h2  class="text-center">
                 <strong>
                     Institute Management
                 </strong>
@@ -24,7 +24,7 @@
         </div>
         <!-- Home Button-->
         <div class="col">
-            <a href="/punishment/workingPlace" id="searchShow" class="btn btn-primary">
+            <a href="/institute" id="searchShow" class="btn btn-primary">
             <!--<i class="fa fa-user " style="font-size: 20px"></i>-->
                 <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
                 &nbsp;
@@ -49,18 +49,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr data-th-each="punishment, rowCount : ${institutes}">
+                    <tr data-th-each="institute, rowCount : ${institutes}">
                         <th data-th-text="${rowCount.count}"></th>
-                        <th data-th-text="${punishment.name}"></th>
-                        <th data-th-text="${punishment.land}"></th>
-                        <th data-th-text="${punishment.email}"></th>
-                        <th data-th-text="${punishment.prisonType.prisonType}"></th>
-                        <th data-th-text="${punishment.address}"></th>
+                        <th data-th-text="${institute.name}"></th>
+                        <th data-th-text="${institute.land}"></th>
+                        <th data-th-text="${institute.email}"></th>
+                        <th data-th-text="${institute.prisonType.prisonType}"></th>
+                        <th data-th-text="${institute.address}"></th>
                         <th>
-                            <a id="instituteView" data-th-href="${'/punishment/' + punishment.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
-                            <a id="instituteEdit" data-th-href="${'/punishment/edit/' + punishment.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
-                            <a id="instituteRemove" data-th-href="${'/punishment/remove/' + punishment.id}" class="btn btn-danger btn-sm">
-                             <!-- data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
+                            <a id="instituteView" data-th-href="${'/institute/' + institute.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
+                            <a id="instituteEdit" data-th-href="${'/institute/edit/' + institute.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
+                            <a data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" data-th-href="${'/institute/delete/' + institute.id}" class="btn btn-danger btn-sm">
+                           <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
                         </th>
                     </tr>
                 </tbody>
@@ -75,21 +75,21 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h3 class="text-center text-danger">
-                    <strong>There is no punishment upto now please add punishment to the system using "New" button.</strong>
+                    <strong>There is no institute upto now please add institute to the system using "New" button.</strong>
                 </h3>
             </div>
         </div>
-        <script>
-            /*active boostrap alert - start*/
-            $(".alert").alert();
-            /*active boostrap alert - end*/
-        </script>
     </div>
 </div>
 <!--footer include-->
  <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
+<script>
+    /*active boostrap alert - start*/
+    $(".alert").alert();
+    /*active boostrap alert - end*/
+</script>
 
 </body>
 </html>
