--- a/src/main/resources/templates/qualification/addQualification.html
+++ b/src/main/resources/templates/qualification/addQualification.html
@@ -98,7 +98,7 @@
         </div >
         <div class="col-md-8" >
           <input id="startDate" data-th-field="*{startDate}" class="form-control" tabindex="4"
-                 type="text" />
+                 type="date" />
           <span data-th-errors="*{startDate}"
                 data-th-if="${#fields.hasErrors('startDate')}" class="error" >Error Employee code
                             </span >
@@ -111,7 +111,7 @@
         </div >
         <div class="col-md-8" >
           <input id="endDate" data-th-field="*{endDate}" class="form-control" tabindex="4"
-                 type="text"  />
+                 type="date"  />
           <span data-th-errors="*{endDate}"
                 data-th-if="${#fields.hasErrors('endDate')}" class="error" >Error Employee code
                             </span >
