--- a/src/main/resources/templates/qualification/qualification.html
+++ b/src/main/resources/templates/qualification/qualification.html
@@ -53,7 +53,7 @@
               class="fa fa-edit" ></i >&nbsp;Edit</a >
         <a class="btn btn-danger btn-sm"            data-th-href="${'/qualification/remove/' + qualification.id}"
            data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"        ><i              aria-hidden="true" class="fa fa-trash" ></i >
+           ><i              aria-hidden="true" class="fa fa-trash" ></i >
           Delete</a >
 
       </th >
