--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -24,7 +24,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <p data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}" ></p >
+          <span data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}" ></span >
         </strong >
       </h4 >
     </div >
@@ -237,35 +237,122 @@
       </div >
     </div >
   </div >
-  <!--Employee Institute Details-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.employeeInstitutes)}"
-       data-th-each="employeeInstituteDetail : ${employeeDetail.employeeInstitutes}" >
-    <div data-th-replace="~{employeeInstitute/employeeInstitute-detail :: employeeInstituteDetailsFragment}" ></div >
+
+  <div id="accordianId" role="tablist" aria-multiselectable="true" >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeInstitutes)}">
+      <div class="card-header" role="tab" id="section1HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
+             aria-controls="section1ContentId" >
+            Employee Institute Details
+          </a >
+        </h5 >
+      </div >
+      <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
+        <div class="card-body" >
+          <!--Employee Institute Details-->
+          <div class="container-fluid"
+               data-th-each="employeeInstituteDetail : ${employeeDetail.employeeInstitutes}" >
+            <div data-th-replace="~{employeeInstitute/employeeInstitute-detail :: employeeInstituteDetailsFragment}" ></div >
+          </div >
+        </div >
+      </div >
+    </div >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeLeaves)}">
+      <div class="card-header" role="tab" id="section2HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
+             aria-controls="section2ContentId" >
+            Employee Leave
+          </a >
+        </h5 >
+      </div >
+      <div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId" >
+        <div class="card-body" >
+          <!--Employee Leave-->
+          <div class="container-fluid"
+               data-th-each="employeeLeaveDetail : ${employeeDetail.employeeLeaves}" >
+            <div data-th-replace="~{employeeLeave/employeeLeave-detail :: employeeLeaveDetailsFragment}" ></div >
+          </div >
+        </div >
+      </div >
+    </div >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.qualifications)}">
+      <div class="card-header" role="tab" id="section3HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true"
+             aria-controls="section3ContentId" >
+            Qualification
+          </a >
+        </h5 >
+      </div >
+      <div id="section3ContentId" class="collapse in" role="tabpanel" aria-labelledby="section3HeaderId" >
+        <div class="card-body" >
+          <!--Qualification-->
+          <div class="container-fluid"
+               data-th-each="qualificationDetail : ${employeeDetail.qualifications}" >
+            <div data-th-replace="~{qualification/qualification-detail :: qualificationDetailsFragment}" ></div >
+          </div >
+        </div >
+      </div >
+    </div >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.commendations)}">
+    <div class="card-header" role="tab" id="section4HeaderId" >
+      <h5 class="mb-0" >
+        <a data-toggle="collapse" data-parent="#accordianId" href="#section4ContentId" aria-expanded="true"
+           aria-controls="section4ContentId" >
+          Commendations
+        </a >
+      </h5 >
+    </div >
+    <div id="section4ContentId" class="collapse in" role="tabpanel" aria-labelledby="section4HeaderId" >
+      <div class="card-body" >
+        <!--Commendations-->
+        <div class="container-fluid"
+             data-th-each="commendationDetail : ${employeeDetail.commendations}" >
+          <div data-th-replace="~{commendation/commendation-detail :: commendationDetailsFragment}" ></div >
+        </div >
+      </div >
+    </div >
   </div >
-  <!--Employee Leave-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.employeeLeaves)}"
-       data-th-each="employeeLeaveDetail : ${employeeDetail.employeeLeaves}" >
-    <div data-th-replace="~{employeeLeave/employeeLeave-detail :: employeeLeaveDetailsFragment}" ></div >
-  </div >
-  <!--Qualification-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.qualifications)}"
-       data-th-each="qualificationDetail : ${employeeDetail.qualifications}" >
-    <div data-th-replace="~{qualification/qualification-detail :: qualificationDetailsFragment}" ></div >
-  </div >
-  <!--Commendations-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.commendations)}"
-       data-th-each="commendationDetail : ${employeeDetail.commendations}" >
-    <div data-th-replace="~{commendation/commendation-detail :: commendationDetailsFragment}" ></div >
-  </div >
-  <!--Censure-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.censures)}"
-       data-th-each="censureDetail : ${employeeDetail.censures}" >
-    <div data-th-replace="~{censure/censure-detail :: censureDetailsFragment}" ></div >
-  </div >
-  <!--performance evaluations-->
-  <div class="container-fluid" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluations)}"
-       data-th-each="censureDetail : ${employeeDetail.censures}" >
-    <div data-th-replace="~{performanceEvaluations/performanceEvaluations-detail :: performanceEvaluationsFragment}" ></div >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.censures)}">
+      <div class="card-header" role="tab" id="section5HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section5ContentId" aria-expanded="true"
+             aria-controls="section5ContentId" >
+            Censure
+          </a >
+        </h5 >
+      </div >
+      <div id="section5ContentId" class="collapse in" role="tabpanel" aria-labelledby="section5HeaderId" >
+        <div class="card-body" >
+          <!--Censure-->
+          <div class="container-fluid"
+               data-th-each="censureDetail : ${employeeDetail.censures}" >
+            <div data-th-replace="~{censure/censure-detail :: censureDetailsFragment}" ></div >
+          </div >
+        </div >
+      </div >
+    </div >
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluations)}">
+      <div class="card-header" role="tab" id="section6HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section6ContentId" aria-expanded="true"
+             aria-controls="section6ContentId" >
+            Performance evaluations
+          </a >
+        </h5 >
+      </div >
+      <div id="section6ContentId" class="collapse in" role="tabpanel" aria-labelledby="section6HeaderId" >
+        <div class="card-body" >
+          <!--performance evaluations-->
+          <div class="container-fluid"
+               data-th-each="censureDetail : ${employeeDetail.censures}" >
+            <div data-th-replace="~{performanceEvaluations/performanceEvaluations-detail :: performanceEvaluationsFragment}" ></div >
+          </div >
+        </div >
+      </div >
+    </div >
   </div >
 </div >
 
